add challenge for sce gallery #1

--- a/tags.Rmd
+++ b/tags.Rmd
@@ -11,6 +11,7 @@ Alphabetically sorted list of available tags.
 - `ExperimentHub`
 - `Getting Started`
 - `GitHub Action`
+- `Single cell`
 - `Visualization`
 - `Workflow`
 - `Writing Packages`
