--- a/challenges.Rmd
+++ b/challenges.Rmd
@@ -6,6 +6,26 @@ title: "Challenges"
 Automate this page to pick up information from all "challenge_*.Rmd" pages.
 -->
 
-## Intermediate
-
-* [Contribute to the SingleCellExperiment Gallery](challenge_singlecellexperiment_gallery.html)
+```{r, echo=FALSE, results='asis'}
+challenge_rmds <- list.files(pattern = "challenge_.*.Rmd")
+challenge_htmls <- gsub("Rmd$", "html", challenge_rmds)
+challenges_list <- lapply(challenge_rmds, rmarkdown::yaml_front_matter)
+for (level in c("Novice", "Intermediate", "Advanced")) {
+    counter <- 0
+    cat(sprintf("## %s\n\n",
+                level))
+    for (i in seq_along(challenge_rmds)) {
+        challenge_info <- challenges_list[[i]]
+        if (stringr::str_to_title(challenge_info$params$difficulty) == level) {
+            cat(sprintf("- [%s](%s)\n",
+                        challenge_info$params$topic,
+                        challenge_htmls[i]))
+            counter <- counter + 1
+        }
+    }
+    if (counter == 0) {
+        cat("No challenge available for this difficulty level.\n")
+    }
+    cat("\n")
+}
+```
