--- a/challenge_singlecellexperiment_gallery.Rmd
+++ b/challenge_singlecellexperiment_gallery.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Challenge: The SingleCellExperiment Gallery"
 params:
-    topic: "Contribute to the `SingleCellExperiment` Gallery"
+    topic: "Contribute to the `SingleCellExperiment` Gallery."
     difficulty: "intermediate"
     leaders:
         value:
