--- a/challenge_unit_tests.Rmd
+++ b/challenge_unit_tests.Rmd
@@ -1,15 +1,14 @@
 ---
 title: "Challenge"
 params:
-    topic: "Contribute to the `SingleCellExperiment` Gallery."
-    difficulty: "intermediate"
+    topic: "Getting Started with Unit tests."
+    difficulty: "novice"
     leaders:
         value:
-            LTLA: "Aaron Lun"
             kevinrue: "Kevin Rue"
     tags:
-        - "Single cell"
-        - "Visualization"
+        - "Unit testing"
+        - "Best Practices"
     duration: "1 hour(s)"
 ---
 
@@ -44,7 +43,7 @@ A minimum of `r params$duration` is recommended for this challenge.
 
 ## Notes
 
-- Fork the [original repository](https://github.com/LTLA/SCEGallery), working on a branch of your fork, and submitting a pull request when your contribution is ready for review.
-- You may contribute new R markdown files or edit existing ones.
-- When contributing a new chapter, we recommend reading an [existing chapter](https://github.com/LTLA/SCEGallery/blob/master/reduced-dimensions.Rmd), and using it as a template for your own contribution.
-  Contributions written in a style that matches current contents are more likely to be accepted, and more rapidly.
+- This challenge naturally follows and complements the challenge to [write a template software package](404.html).
+- This challenge naturally precedes and complements the challenge to [write GitHub Action workflowa](challenge_github_action_templates.html) that automatically run the tests and upload code coverage to the codecov website).
+- 'Code clinics' - participants can discuss their respective packages and learn from each other.
+- Discuss best practices in writing unit tests. For instance, in code-driven development, tests are written before the code itself.
