--- a/challenge_singlecellexperiment_gallery.Rmd
+++ b/challenge_singlecellexperiment_gallery.Rmd
@@ -35,7 +35,7 @@ for (github in names(params$leaders)) {
 ## Tags
 
 ```{r, echo=FALSE, results='asis'}
-cat(sprintf("- `%s`\n", params$tags))
+cat(sprintf("- `%s`\n", sort(params$tags)))
 ```
 
 ## Duration
