--- a/challenge_github_action_templates.Rmd
+++ b/challenge_github_action_templates.Rmd
@@ -12,34 +12,8 @@ params:
     duration: "2 hour(s)"
 ---
 
-```{r, include=FALSE}
-htmltools::tagList(rmarkdown::html_dependency_font_awesome())
+```{r, child="childs/challenge.Rmd"}
 ```
-
-`r params$topic`
-
-## Difficulty
-
-`r stringr::str_to_title(params$difficulty)`.
-
-## Challenge leader(s)
-
-```{r, echo=FALSE, results='asis'}
-for (github in names(params$leaders)) {
-    profile <- sprintf("http://github.com/%s", github)
-    cat(sprintf('- %s - <i class="fab fa-github"></i> [%s](%s)\n', params$leaders[[github]], github, profile))
-}
-```
-
-## Tags
-
-```{r, echo=FALSE, results='asis'}
-cat(sprintf("- `%s`\n", sort(params$tags)))
-```
-
-## Duration
-
-A minimum of `r params$duration` is recommended for this challenge.
 
 ## Notes
 
