add all the remaining challenges brainstormed so far

--- a/tags.Rmd
+++ b/tags.Rmd
@@ -2,6 +2,7 @@
 title: "Tags"
 params:
     tags:
+        - "Accessibility"
         - "Best Practices"
         - "Community"
         - "Containers"
