--- a/challenge_containers.Rmd
+++ b/challenge_containers.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Challenge"
 params:
-    topic: "Create containers that include certain packages and/or datasets."
+    topic: "Create containers that include certain packages and datasets."
     difficulty: "advanced"
     leaders:
         value:
