--- a/challenge_singlecellexperiment_gallery.Rmd
+++ b/challenge_singlecellexperiment_gallery.Rmd
@@ -11,6 +11,8 @@ params:
         - "Single cell"
         - "Visualization"
     duration: "1 hour(s)"
+    repositories:
+      - "LTLA/SCEGallery"
 ---
 
 ```{r, child="childs/challenge.Rmd"}
@@ -18,7 +20,7 @@ params:
 
 ## Notes
 
-- Fork the [original repository](https://github.com/LTLA/SCEGallery), working on a branch of your fork, and submitting a pull request when your contribution is ready for review.
+- Fork the original repository <i class="fab fa-github"></i> [LTLA/SCEGallery](https://github.com/LTLA/SCEGallery), working on a branch of your fork, and submitting a pull request when your contribution is ready for review.
 - You may contribute new R markdown files or edit existing ones.
 - When contributing a new chapter, we recommend reading an [existing chapter](https://github.com/LTLA/SCEGallery/blob/master/reduced-dimensions.Rmd), and using it as a template for your own contribution.
   Contributions written in a style that matches current contents are more likely to be accepted, and more rapidly.
