--- a/challenge_unit_tests.Rmd
+++ b/challenge_unit_tests.Rmd
@@ -17,7 +17,7 @@ params:
 
 ## Notes
 
-- This challenge naturally follows and complements the challenge to [write a template software package](404.html).
+- This challenge naturally follows and complements the challenge to [write a Bioconductor package template](challenge_package_template.html).
 - This challenge naturally precedes and complements the challenge to [write GitHub Action workflowa](challenge_github_action_templates.html) that automatically run the tests and upload code coverage to the codecov website).
 - 'Code clinics' - participants can discuss their respective packages and learn from each other.
 - Discuss best practices in writing unit tests. For instance, in code-driven development, tests are written before the code itself.
